z-index fixes

--- a/fin-app/src/assets/css/site.css
+++ b/fin-app/src/assets/css/site.css
@@ -14,3 +14,7 @@ body {
 .p-panelmenu-header {
   border-bottom: 1px solid #ffffff42;
 }
+
+.p-menubar .p-submenu-list {
+  z-index: 2;
+}
